# auto-lecture

./: .gitignore  hello.jsx  hello.tsx  notion-markdown-test.md
.claude/: CLAUDE.md  settings.local.json
.claude/skills/blueprint-writer/: SKILL.md
.claude/skills/guide-writer/: SKILL.md  notion-markdown-ref.md  screenshot-annotation.md
.claude/skills/lab-manager/: SKILL.md
.claude/skills/script-writer/: SKILL.md
.claude/skills/slide-master/: SKILL.md  slidev-execution-guide.md  sync-report-w3.md
.claude/skills/slide-reviewer/: SKILL.md
.claude/skills/tui-screenshot-capture/: SKILL.md
lab-manager-workspace/evals/: evals.json
lab-manager-workspace/iteration-1/: benchmark.json  benchmark.md
lab-manager-workspace/iteration-1/eval-0-basic/: eval_metadata.json
lab-manager-workspace/iteration-1/eval-1-constrained/: eval_metadata.json
lectures/.claude/: settings.local.json
lectures/agentic-coding-basic/: .gitignore  curriculum.feedback.md  curriculum.md  env.sh
lectures/ai-agent-dev/: CLAUDE.md  curriculum-detail.md  references.md  todos.md
lectures/ai-agent-dev-v2/: curriculm.md
lectures/ai-agent-dev/study-langgraph/: CLAUDE.md  pyproject.toml  simple_agent.py  simple_rag.py
lectures/screenshot-test/: pw-capture.py
lectures/typescript-react/: CLAUDE.md  feedback.md
script-writer-workspace/evals/: evals.json
script-writer-workspace/iteration-1/: benchmark.json  grade_all.py
scripts/: capture-all-clicks.mjs  capture-slide.mjs  screenshot-slides.mjs  slidev-serve.sh  validate-slides.sh
slidev-workspace/iteration-1/: benchmark.json
(+532 files in other folders)
